--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
   --main-white: #f0f0f0;
-  --main-red: #be3144;
-  --main-blue: #45567d;
+  --main-red: #36be31;
+  --main-blue: #45567e;
   --main-gray: #303841;
 }
 
